--- a/index.html
+++ b/index.html
@@ -4,12 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <div class="block1">
-        
-    </div>
-    <p>test</p>
+    <header class="header-bg">
+        <div class="nav-wrapper">
+            <a class="logo" href="#">Zetta Hotels</a>
+            <div class="nav-a">
+                <ul class="nav-ul">
+                    <li>
+                        <a href="#">home</a>
+                    </li>
+                    <li>
+                        <a href="#">rooms</a>
+                    </li>
+                    <li>
+                        <a href="#">restaurant</a>
+                    </li>
+                    <li>
+                        <a href="#">blog</a>
+                    </li>
+                    <li>
+                        <a href="#">contact</a>
+                    </li>
+                </ul>
+            </div>            
+        </div>
+        <h1 class="title">About Us</h1>
+    </header>
+    <section>
+        <div class="section-wrapper">
+            <div class="left-block">
+                <h6>about us</h6>
+                <h2>Trust and quality are our atuus</h2>
+                <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <div class="read-more">
+                    <a href="#">read more</a>
+                </div>
+            </div>
+            <div class="right-block">
+                <img src="images/rhema-kallianpur-jbJ-_hw2yag-unsplash.jpg" alt="img1">
+                <img src="images/chelsea-gates-0653_wY0nRc-unsplash.jpg" alt="img2">
+                <img src="images/eddi-aguirre-ZAVHbpOn4Jk-unsplash.jpg" alt="img3">
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
