--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h6>about us</h6>
                 <h2>Trust and quality are our atuus</h2>
                 <p class="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <div class="read-more">
                     <a href="#">read more</a>
                 </div>
@@ -56,5 +56,40 @@
 
         </div>
     </section>
+    <footer class="footer-bg">
+        <h6>about us</h6>
+        <h2>We bring you the finest details</h2>
+        <div class="footer">
+            <div class="footer-tile">
+				<div class="icon">
+					<img src="images/001-hotel-1.svg" alt="icon">
+				</div>
+				<h4>Free Wifi to stay connected</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
+			</div>
+            <div class="footer-tile">
+                <div class="icon">
+					<img src="images/001-hotel-1.svg" alt="icon">
+				</div>
+				<h4>4K Television and Netflix included</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
+			</div>
+            <div class="footer-tile">
+                <div class="icon">
+					<img src="images/001-hotel-1.svg" alt="icon">
+				</div>
+				<h4>Span zone where you can chill</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
+			</div>
+            <div class="footer-tile">
+                <div class="icon">
+					<img src="images/001-hotel-1.svg" alt="icon">
+				</div>
+				<h4>Spacious rooms for awesome parties</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
+			</div>
+            
+        </div>
+    </footer>
 </body>
 </html>
