--- a/index.html
+++ b/index.html
@@ -56,40 +56,42 @@
 
         </div>
     </section>
-    <footer class="footer-bg">
-        <h6>about us</h6>
-        <h2>We bring you the finest details</h2>
-        <div class="footer">
-            <div class="footer-tile">
-				<div class="icon">
-					<img src="images/001-hotel-1.svg" alt="icon">
-				</div>
-				<h4>Free Wifi to stay connected</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
-			</div>
-            <div class="footer-tile">
-                <div class="icon">
-					<img src="images/001-hotel-1.svg" alt="icon">
-				</div>
-				<h4>4K Television and Netflix included</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
-			</div>
-            <div class="footer-tile">
-                <div class="icon">
-					<img src="images/001-hotel-1.svg" alt="icon">
-				</div>
-				<h4>Span zone where you can chill</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
-			</div>
-            <div class="footer-tile">
-                <div class="icon">
-					<img src="images/001-hotel-1.svg" alt="icon">
-				</div>
-				<h4>Spacious rooms for awesome parties</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>					
-			</div>
-            
+    <section class="section-bg">
+        <div class="container">
+            <h3 class="title1">ABOUT US</h3>
+            <h2 class="title2">We bring you the finest details</h2>
+            <div class="box-wrapper">
+                <div class="block">
+                    <div class="icon-block">
+                        <img src="images/001-hotel-1.svg" alt="icon">
+                    </div>
+                    <h3>Free Wifi to stay connected</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div class="block">
+                    <div class="icon-block">
+                        <img src="images/001-hotel-1.svg" alt="icon">
+                    </div>
+                    <h3>Free Wifi to stay connected</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div class="block">
+                    <div class="icon-block">
+                        <img src="images/001-hotel-1.svg" alt="icon">
+                    </div>
+                    <h3>Free Wifi to stay connected</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div class="block">
+                    <div class="icon-block">
+                        <img src="images/001-hotel-1.svg" alt="icon">
+                    </div>
+                    <h3>Free Wifi to stay connected</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+    
+            </div>
         </div>
-    </footer>
+    </section>
 </body>
 </html>
