--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
                 </div>
             </div>
             <div class="right-block">
-                <img src="images/rhema-kallianpur-jbJ-_hw2yag-unsplash.jpg" alt="img1">
-                <img src="images/chelsea-gates-0653_wY0nRc-unsplash.jpg" alt="img2">
-                <img src="images/eddi-aguirre-ZAVHbpOn4Jk-unsplash.jpg" alt="img3">
+                <img class="img-1" src="images/rhema-kallianpur-jbJ-_hw2yag-unsplash.jpg" alt="img1">
+                <img class="img-1" src="images/chelsea-gates-0653_wY0nRc-unsplash.jpg" alt="img2">
+                <img class="img-2" src="images/eddi-aguirre-ZAVHbpOn4Jk-unsplash.jpg" alt="img3">
             </div>
-
         </div>
     </section>
     <section class="section-bg">
